--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -6,8 +6,14 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      
-      - name: Source venv & Run pytests
+
+      - name: Install dependencies
         run: |
-          source .venv/bin/activate
-          PYTHONPATH=/home/daire/python_practice/ahcounter pytest -v tests
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+
+      - name: Source venv & Run pytests
+        env:
+          PYTHONPATH: ${{ github.workspace }}
+        run: pytest -v tests
