--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -1,5 +1,7 @@
 name: Unit Testing
-on:  workflow_dispatch
+on:  
+  workflow_dispatch:
+  pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
